--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>分子量計算機</title>
   
-  <script type="text/javascript" src="js/jquery-2.0.2.js"></script>
+  <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="js/MMC.js"></script>
 
   <style type="text/css">
