--- a/index.html
+++ b/index.html
@@ -9,24 +9,26 @@
   <style type="text/css">
 body {
     font-family: "Century Gothic", "Segoe UI",Arial, "Microsoft YaHei",Sans-Serif;
+    margin: 0;
 }
 input {
-    width:66%;
     text-align:center;
-}
-.InputLayer {
-    text-align:center;
-    height:20%;
-    padding:25px;
-}
-.ResultLayer {
-    background: rgba(57, 135, 251, 0.68);
-    height:60%;
-    
+    font-size: 24px;
+    font-weight:bold;
+    padding: 20px;
+    margin:0;
+    border: 0;
+    border-bottom: 1px solid #E6C770CC;
+    background: transparent;
+    color: white;
+    text-shadow: 0px 0px 5px #777;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
 }
 .Outter {
     width:100%;
     height:100%;
+    margin-top: -10px;
 }
 .ResultLayer {
     white-space: nowrap;
@@ -34,18 +36,10 @@ input {
     padding:20px 10px;
     border-radius: 60% / 7px;
     box-shadow: 0px 0px 10px #aaa ; 
-    background-image: -webkit-gradient(linear, 100% 0, 0 0, from(#E9E9E9), color-stop(0.5, white), to(#E9E9E9));
-    background-image: -webkit-linear-gradient(to right, #E9E9E9, white, #E9E9E9);
-    background-image: -moz-linear-gradient(to right, #E9E9E9, white, #E9E9E9);
-    background-image: -o-linear-gradient(to right, #E9E9E9, white, #E9E9E9);
-    background-image: linear-gradient(to right, #E9E9E9, white, #E9E9E9); 
     text-align:center;
-}
-p {
-    font-size: 24px;
-    font-weight:bold;
-    padding: 20px;
-    margin:0;
+    background: rgba(35, 112, 227, 0.83);
+    color: white;
+    text-shadow: 0px 0px 5px #777;
 }
 #InputVal {
     font-size: 36px;
@@ -71,7 +65,7 @@ window.onload = function(){
 <body>
 <div class="Outter">
     <div class="ResultLayer">
-        <div class="InputLayer"> <input id="In" type="text" name="Mass"/> </div>
+        <input id="In" type="text" name="Mass"/>
         <p>分析結果：<span id="Output"></span></p></div>
     
 </div>
